--- a/README
+++ b/README
@@ -11,7 +11,7 @@ http://github.com/timburks/nu.
 
 The repository is configured for unit tests to pass. 
 To see a failure, change "4" to something else in 
-test/test_sample.nu.
+test/test_example.nu.
 
 Travis CI is a hosted continuous integration service
 offered at no charge to open source projects hosted
